# fastapi-react-ws-chat

./: .flake8  .gitignore  .pre-commit-config.yaml  .run-mypy  LICENSE  README.md  mypy.ini  package-lock.json  pyproject.toml  pytest.ini
src/backend/: .run-mypy  auth_setups.py  database.py  dependencies.py  main.py
src/backend/extended_security/: auth2_password_bearer.py  oauth_refresh_scheme.py
src/backend/models/: chat.py  chat_message.py  user.py  user_chat_link.py  user_chat_state.py
src/backend/routers/: auth.py  oauth_refresh_scheme.py  ws_chat.py
src/backend/schemas/: chat.py  chat_message.py  client_packet.py  event.py  server_packet.py  token_data.py  tokens_response.py  user.py  user_chat_state.py
src/backend/services/: chat_server.py  ws_chat_server.py
src/backend/services/auth/: abstract_auth.py  auth_exc.py  internal_sqla_auth.py
src/backend/services/chat_manager/: chat_manager.py  chat_manager_exc.py  utils.py
src/backend/services/chat_repo/: abstract_chat_repo.py  chat_repo_exc.py  chat_repo_interface.py  chat_repo_memory.py  sqla_chat_repo.py
src/backend/services/event_broker/: abstract_event_broker.py  event_broker_exc.py  in_memory_event_broker.py  rabbit_event_broker.py
src/backend/services/message_broker/: abstract_message_broker.py  in_memory_message_broker.py  message_broker_exc.py
src/backend/services/uow/: abstract_uow.py  sqla_uow.py  (+1 more)
src/frontend/: package-lock.json  package.json
src/frontend/app/: data.ts  root.tsx
src/frontend/src/: App.jsx  App.tsx  ChatClient.ts  ChatDataTypes.ts  ChatProtocolTypes.ts  main.jsx
(+52 files in other folders)
