[tool.poetry]
name = "fastapi-react-ws-chat"
version = "0.1.0"
description = ""
authors = ["Yurii <yurii.motov.monte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.2"
pydantic = "2.6.1"
SQLAlchemy = "2.0.27"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "0.21.0"
aiosqlite = "^0.19.0"
pre-commit = "^3.6.1"
mypy = "^1.8.0"
email-validator = "^2.1.0.post1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
