[tool.poetry]
name = "fastapi-react-ws-chat"
version = "0.1.0"
description = ""
authors = ["Yurii <yurii.motov.monte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.6.1"
SQLAlchemy = "2.0.27"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
aio-pika = "^9.4.0"
passlib = "^1.7.4"
fastapi = "^0.111.0"
pyjwt = "^2.8.0"
types-passlib = "^1.7.7.20240327"
bcrypt = "4.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "0.21.2"
aiosqlite = "^0.19.0"
pre-commit = "^3.6.1"
mypy = "^1.8.0"
email-validator = "^2.1.0.post1"
httpx = "^0.27.0"
pytest-timeout = "^2.2.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
